<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crops"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/crops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_crops_type"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_size"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/field_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/enter_field_size_in_square_meters"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/field_location"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:paddingTop="10dp">
        <EditText
            android:id="@+id/field_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/enter_latitude" />

        <EditText
            android:id="@+id/field_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_longitude" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_gravity="start|bottom"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/get_weather_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_weather"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="0dp"/>

        <Button
            android:id="@+id/clear_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:text="@string/submit" />

    </LinearLayout>



</LinearLayout>