<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_crops_to_get_weather"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_no_crops"
        android:hint="@string/enter_number_of_crops"
        android:layout_marginTop="5dp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="start|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/cancel"
            android:layout_marginStart="150dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_settings"
            android:text="@string/save"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            />

    </LinearLayout>

</LinearLayout>